# ql-tetris

./: .gitignore  CMakeLists.txt  Makefile  README.md  debug.sh  install.sh  ql-tetris.desktop  tetris  uninstall.sh
inc/: int_to_str.h  tetris.h
inc/caca/: caca.h
lib/: libSDL2_mixer-2.0.so.0.2.0  libcaca.so.0.99.19
src/: audio.c  check_rotate.c  color.c  debug.c  event.c  free.c  get_tetrimino.c  init_menu.c  init_tetrimino_1.c  init_tetrimino_2.c  init_var_game.c  int_to_str_1.c  int_to_str_2.c  load_tetrimino.c  logic_game.c  logic_menu.c  logic_start_end.c  main.c  move_down.c  move_left.c  move_right.c  render_game_1.c  render_game_2.c  render_menu.c  render_over.c  render_start.c  rotate.c  score.c  timer_core.c  timer_game.c
tetrimino/: i.tetrimino  j.tetrimino  l.tetrimino  o.tetrimino  s.tetrimino  t.tetrimino  z.tetrimino
