cmake_minimum_required(VERSION 3.14)
project(ql_tetris C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(inc/caca)
include_directories(inc/SDL2)
link_directories(lib)

add_executable(ql_tetris
        inc/caca/caca.h
        inc/caca/caca_types.h
        inc/SDL2/begin_code.h
        inc/SDL2/close_code.h
        inc/SDL2/SDL.h
        inc/SDL2/SDL_assert.h
        inc/SDL2/SDL_atomic.h
        inc/SDL2/SDL_audio.h
        inc/SDL2/SDL_bits.h
        inc/SDL2/SDL_blendmode.h
        inc/SDL2/SDL_clipboard.h
        inc/SDL2/SDL_config.h
        inc/SDL2/SDL_config_android.h
        inc/SDL2/SDL_config_iphoneos.h
        inc/SDL2/SDL_config_macosx.h
        inc/SDL2/SDL_config_minimal.h
        inc/SDL2/SDL_config_pandora.h
        inc/SDL2/SDL_config_psp.h
        inc/SDL2/SDL_config_windows.h
        inc/SDL2/SDL_config_winrt.h
        inc/SDL2/SDL_config_wiz.h
        inc/SDL2/SDL_copying.h
        inc/SDL2/SDL_cpuinfo.h
        inc/SDL2/SDL_egl.h
        inc/SDL2/SDL_endian.h
        inc/SDL2/SDL_error.h
        inc/SDL2/SDL_events.h
        inc/SDL2/SDL_filesystem.h
        inc/SDL2/SDL_gamecontroller.h
        inc/SDL2/SDL_gesture.h
        inc/SDL2/SDL_haptic.h
        inc/SDL2/SDL_hints.h
        inc/SDL2/SDL_joystick.h
        inc/SDL2/SDL_keyboard.h
        inc/SDL2/SDL_keycode.h
        inc/SDL2/SDL_loadso.h
        inc/SDL2/SDL_log.h
        inc/SDL2/SDL_main.h
        inc/SDL2/SDL_messagebox.h
        inc/SDL2/SDL_mixer.h
        inc/SDL2/SDL_mouse.h
        inc/SDL2/SDL_mutex.h
        inc/SDL2/SDL_name.h
        inc/SDL2/SDL_opengl.h
        inc/SDL2/SDL_opengl_glext.h
        inc/SDL2/SDL_opengles.h
        inc/SDL2/SDL_opengles2.h
        inc/SDL2/SDL_opengles2_gl2.h
        inc/SDL2/SDL_opengles2_gl2ext.h
        inc/SDL2/SDL_opengles2_gl2platform.h
        inc/SDL2/SDL_opengles2_khrplatform.h
        inc/SDL2/SDL_pixels.h
        inc/SDL2/SDL_platform.h
        inc/SDL2/SDL_power.h
        inc/SDL2/SDL_quit.h
        inc/SDL2/SDL_rect.h
        inc/SDL2/SDL_render.h
        inc/SDL2/SDL_revision.h
        inc/SDL2/SDL_rwops.h
        inc/SDL2/SDL_scancode.h
        inc/SDL2/SDL_shape.h
        inc/SDL2/SDL_stdinc.h
        inc/SDL2/SDL_surface.h
        inc/SDL2/SDL_system.h
        inc/SDL2/SDL_syswm.h
        inc/SDL2/SDL_test.h
        inc/SDL2/SDL_test_assert.h
        inc/SDL2/SDL_test_common.h
        inc/SDL2/SDL_test_compare.h
        inc/SDL2/SDL_test_crc32.h
        inc/SDL2/SDL_test_font.h
        inc/SDL2/SDL_test_fuzzer.h
        inc/SDL2/SDL_test_harness.h
        inc/SDL2/SDL_test_images.h
        inc/SDL2/SDL_test_log.h
        inc/SDL2/SDL_test_md5.h
        inc/SDL2/SDL_test_memory.h
        inc/SDL2/SDL_test_random.h
        inc/SDL2/SDL_thread.h
        inc/SDL2/SDL_timer.h
        inc/SDL2/SDL_touch.h
        inc/SDL2/SDL_types.h
        inc/SDL2/SDL_version.h
        inc/SDL2/SDL_video.h
        inc/SDL2/SDL_vulkan.h
        inc/int_to_str.h
        inc/tetris.h
        src/audio.c
        src/check_rotate.c
        src/color.c
        src/debug.c
        src/event.c
        src/free.c
        src/get_tetrimino.c
        src/init_menu.c
        src/init_tetrimino_1.c
        src/init_tetrimino_2.c
        src/init_var_game.c
        src/int_to_str_1.c
        src/int_to_str_2.c
        src/load_tetrimino.c
        src/logic_game.c
        src/logic_menu.c
        src/logic_start_end.c
        src/main.c
        src/move_down.c
        src/move_left.c
        src/move_right.c
        src/render_game_1.c
        src/render_game_2.c
        src/render_menu.c
        src/render_over.c
        src/render_start.c
        src/rotate.c
        src/score.c
        src/timer_core.c
        src/timer_game.c)

target_link_libraries(ql_tetris caca SDL2 SDL2_mixer)